# krust-ebpf-hooks

./: Cargo.toml  README.md
docs/: environment-setup.md
krust-ebpf-hooks/: Cargo.toml  build.rs
krust-ebpf-hooks-common/: Cargo.toml
krust-ebpf-hooks-common/src/: lib.rs
krust-ebpf-hooks-ebpf/: Cargo.toml
krust-ebpf-hooks-ebpf/src/: main.rs  utils.rs
krust-ebpf-hooks-ebpf/src/tracepoints/: memory.rs
krust-ebpf-hooks/src/: main.rs
