[package]
name = "krust-ebpf-hooks-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
krust-ebpf-hooks-common = { path = "../krust-ebpf-hooks-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "krust-ebpf-hooks"
path = "src/main.rs"
